examples/type_system/failing/100_unclosed_string_recovery.flx
let label = "The answer
let after = 1
print(after)
